skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -675,3 +675,5 @@ commit_hash:
     hash: "eedc9dc0597fdb519ea62a23d5fd115207be505b"
   "0.92.220":
     hash: "636e942660b12443bba71bab8492c2355ac02606"
+  "0.92.221":
+    hash: "be3e8788f6830a49bd88ac03ea5e4671fb899999"
