skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -679,3 +679,5 @@ commit_hash:
     hash: "be3e8788f6830a49bd88ac03ea5e4671fb899999"
   "0.92.222":
     hash: "aed226c55c8b6df29e7b5f67bf666ddce98eb592"
+  "0.92.223":
+    hash: "d70e135d35f01ed00d4174498d3902af1a224c19"
