skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -683,3 +683,5 @@ commit_hash:
     hash: "d70e135d35f01ed00d4174498d3902af1a224c19"
   "0.92.224":
     hash: "6fbaa9345854d23b6a5f1283dee7e9f76fa3c77e"
+  "0.92.225":
+    hash: "a98f61738f0a755f599196e2125be0e8b988798d"
