skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -693,3 +693,5 @@ commit_hash:
     hash: "c2f693957eecb3fa1aaeace4fa83245d89deeb53"
   "0.92.229":
     hash: "19ccb2c7014571f0cebc9315a8f05ac7f113c3c2"
+  "0.92.230":
+    hash: "127eef78dceebf73776db89e1db25d0a4cc92c77"
