skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -713,3 +713,5 @@ commit_hash:
     hash: "483ca3b411bbdce5f562707365c5f27721aab646"
   "0.92.239":
     hash: "2875d767bc76f46999d3d1cce60f85630f1e3d34"
+  "0.92.240":
+    hash: "e8b82bc6b02fb7ef01b7140a892b4ff66a90e9c0"
