skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -721,3 +721,5 @@ commit_hash:
     hash: "1692963c694f85a805f694212a5b2b970ee707a2"
   "0.93.1":
     hash: "812f65e1f80f6bf178d33fe71b6e97a36d2fa8f0"
+  "0.93.2":
+    hash: "05e385ea9e0e0f11422e5a9799e0cd8e36c757ac"
