--- a/conandata.yml
+++ b/conandata.yml
@@ -727,3 +727,5 @@ commit_hash:
     hash: "b45fde45776abe34e5751da8f8948e9945652008"
   "0.93.4":
     hash: "35b759294f448026bbae872756a02b49920cef5a"
+  "0.93.5":
+    hash: "ccba6899de0b2ac913ffd8ad758e03cebfc4e81f"
