Pull request #346: Fix and add x64 build to CI
Merge in ADGUARD-CORE-LIBS/vpn-libs from fix/x64_build to master

Squashed commit of the following:

commit 3f8f10c5c02c3e305448c4c427897c0c93044555
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Sep 4 18:56:17 2024 +0300

    Reuse python venv

commit cc5ad878f08b126c4fdb275355d97c11419bdaa4
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Sep 4 14:42:56 2024 +0300

    Fix calling a batch script from another batch script

commit b339ad4045db846745969911852fb5039832bec0
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Sep 4 14:40:58 2024 +0300

    Fix ctest not being in path

commit ec262ac7aca2453e8a4a343d8b5fceeac93479dc
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Sep 4 13:03:43 2024 +0300

    Build vpnlibs_core for x64 during CI

commit fde6c507dc1c75d4e130eebc9d3e884bf0580c04
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Sep 4 13:03:21 2024 +0300

    Fix x64 build and some clang-tidy warnings

--- a/bamboo-specs/run-tests.yaml
+++ b/bamboo-specs/run-tests.yaml
@@ -86,16 +86,37 @@ Run tests on Windows:
         description: Checkout Default Repository
         force-clean-build: 'true'
     - script:
-        description: Build tests
+        description: Build x64 library
         interpreter: BINSH_OR_CMDEXE
         scripts:
           - |-
-            call vcvarsall amd64_x86
+            call vcvarsall amd64
 
             python -m venv venv --clear
             call .\venv\Scripts\activate
             pip install conan --upgrade
             conan remove -c "*"
+
+            set VPN_LIBS_ROOT=%cd%
+            if exist build\ rmdir /s /q build || exit /b 1
+            mkdir build || exit /b 1
+            cd build || exit /b 1
+
+            cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo ^
+                -DCMAKE_C_FLAGS_DEBUG=/MT ^
+                -DCMAKE_CXX_FLAGS_DEBUG=/MT ^
+                -G Ninja ^
+                ..
+
+            cmake --build . --target vpnlibs_core --parallel || exit /b 1
+            deactivate
+    - script:
+        description: Build tests
+        interpreter: BINSH_OR_CMDEXE
+        scripts:
+          - |-
+            call vcvarsall amd64_x86
+            call .\venv\Scripts\activate
 
             set VPN_LIBS_ROOT=%cd%
             if exist build\ rmdir /s /q build || exit /b 1
