skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -749,3 +749,5 @@ commit_hash:
     hash: "f6444d5705d03d2d1dcffedd51d437c3438f1d2c"
   "0.93.15":
     hash: "e269dab8a35bcde2d8cfaccc52a93928d164d482"
+  "0.93.16":
+    hash: "5fd353441819be8cdc8bc9d53a2b2e43e498abcb"
