skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -751,3 +751,5 @@ commit_hash:
     hash: "e269dab8a35bcde2d8cfaccc52a93928d164d482"
   "0.93.16":
     hash: "5fd353441819be8cdc8bc9d53a2b2e43e498abcb"
+  "0.93.17":
+    hash: "80e34d10cebcb26b2b380962d278b23bf8dca4c5"
