skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -771,3 +771,5 @@ commit_hash:
     hash: "a365a7af3f242a7d5d9440497f46b5c58ca68dc2"
   "0.93.26":
     hash: "49f9aaec164294da00fc012dc29c4bc355654341"
+  "0.93.27":
+    hash: "c6f2aa356a2179ea812425c9f70f341e7b8a6cbe"
