skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -787,3 +787,5 @@ commit_hash:
     hash: "d96f4352433ded19135216224fdba90c7cc8c482"
   "0.93.34":
     hash: "5124e0cf7f3a391fc65ce47b80a48872b6e622e7"
+  "0.93.35":
+    hash: "dc952ff7e9aa49b3f8a5847f86b4245dd16a1f8f"
