skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -801,3 +801,5 @@ commit_hash:
     hash: "20aad7ceb48be47c488a0ab20758a650a6256c3c"
   "0.93.41":
     hash: "6013450823effb5ffee412cac0aff7b73219761d"
+  "0.93.42":
+    hash: "4839e05cf2002d398a484bbc16ee64cc5ce259d5"
