skipci: Fix specs

--- a/bamboo-specs/increment-version.yaml
+++ b/bamboo-specs/increment-version.yaml
@@ -30,6 +30,8 @@ Increment version:
         interpreter: SHELL
         scripts:
           - |-
+            #!/bin/bash
+
             set -x -e
 
             git config user.name "Bamboo"
