skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -813,3 +813,5 @@ commit_hash:
     hash: "aaeac9e7869380c356f2019a9887c74f6537d63b"
   "0.93.47":
     hash: "54f82d0ccdc402d0726375ecebacdad186755812"
+  "0.93.48":
+    hash: "a3d3bf050d2a2b154fc9dc12c73e1999556cdf72"
