Pull request 379: [0.15] Change how DNS traffic is handled by the VPN client
Squashed commit of the following:

commit 5dea84252bb88af3a345c882477257df267db1e1
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Dec 17 15:48:33 2024 +0300

    Remove unused function

commit 44e2573217305f23f30c8e340ddb71276e14d262
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Dec 11 16:18:17 2024 +0300

    Fix retry

commit 5ca0d3072ec64df56c1127f9f1058656250e2bdf
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Dec 11 16:10:41 2024 +0300

    Don't check requests order in MockDnsServer

commit 6c610fe576964c872d280ea7d6a9181432fed23f
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Dec 11 15:22:17 2024 +0300

    Retry MockDnsServer sockets binding

commit fba9117af8fd1cca5a61e3f955c6365e6873afe3
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Dec 10 21:31:23 2024 +0300

    Edit doc comment

commit 61d445b2b9d55d4916bc9c3851ae534dc5da361d
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Tue Dec 10 17:39:46 2024 +0300

    Add more tests

commit 446d108f486a8bb2ef262276120d88e3ea36bfac
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Mon Dec 9 23:33:19 2024 +0300

    Fix memory leak in test

commit 907f82e64dc553207e94637710bee3b26dbe225e
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Mon Dec 9 22:03:55 2024 +0300

    Fix a DNS client bug, improve tests, add new DNS utils, adjust the definition of "inapplicable packet"

commit 90e093730365e965c2f7e41c29f6ebaaf5edf8a4
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Thu Dec 5 01:36:40 2024 +0300

    Fix test intermittently failing

commit b9402c661f48fd8f6147e2c5822fa6f1a474ee3c
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Thu Dec 5 00:42:31 2024 +0300

    Remove unused code

commit d2e95244cc21bf204230e2c8c9e9f39cc92599d0
Author: Nikita Gorskikh <n.gorskikh@adguard.com>
Date:   Wed Dec 4 22:47:01 2024 +0300

    Fix bug a

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -30,11 +30,11 @@ set(SOURCE_FILES
         ${VPNCORE_SRC_DIR}/single_upstream_connector.cpp
         ${VPNCORE_SRC_DIR}/fallbackable_upstream_connector.cpp
         ${VPNCORE_SRC_DIR}/icmp_manager.cpp
-        ${VPNCORE_SRC_DIR}/plain_dns_message_handler.cpp
-        ${VPNCORE_SRC_DIR}/plain_dns_manager.cpp
         ${VPNCORE_SRC_DIR}/vpn_dns_resolver.cpp
         ${VPNCORE_SRC_DIR}/vpn_connection.cpp
         ${VPNCORE_SRC_DIR}/connection_statistics.cpp
+        ${VPNCORE_SRC_DIR}/dns_handler.cpp
+        ${VPNCORE_SRC_DIR}/dns_client.cpp
 )
 if (NOT DISABLE_HTTP3)
     list(APPEND SOURCE_FILES ${VPNCORE_SRC_DIR}/http3_upstream.cpp)
@@ -84,6 +84,9 @@ set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test)
 
 enable_testing()
 
+add_library(mock_dns_server STATIC EXCLUDE_FROM_ALL test/mock_dns_server.cpp)
+target_link_libraries(mock_dns_server vpnlibs_core)
+
 link_libraries(gtest::gtest)
 include(${VPN_LIB_DIR}/cmake/add_unit_test.cmake)
 set(TEST_EXTRA_INCLUDES ${VPNCORE_SRC_DIR} ${THIRD_PARTY_DIR}/klib)
@@ -94,7 +97,7 @@ target_link_libraries(test_vpn_client_fsm PRIVATE vpnlibs_core)
 add_unit_test(test_vpn_client_live "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
 target_link_libraries(test_vpn_client_live PRIVATE vpnlibs_core)
 add_unit_test(test_dns_routing "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE TRUE)
-target_link_libraries(test_dns_routing PRIVATE vpnlibs_core)
+target_link_libraries(test_dns_routing PRIVATE vpnlibs_core mock_dns_server)
 
 set(MOCKED_SOURCE_FILES
         ${SOURCE_FILES}
@@ -132,6 +135,10 @@ endif()
 target_include_directories(vpnlibs_core_mocked PUBLIC include)
 
 link_libraries(vpnlibs_core_mocked)
+add_library(mock_dns_server_2 STATIC EXCLUDE_FROM_ALL test/mock_dns_server.cpp)
+target_link_libraries(mock_dns_server_2 vpnlibs_core_mocked)
+link_libraries(mock_dns_server_2)
+
 target_include_directories(vpnlibs_core_mocked PUBLIC ${TEST_EXTRA_INCLUDES})
 
 add_unit_test(test_domain_filter "${TEST_DIR}" "${TEST_EXTRA_INCLUDES}" TRUE FALSE)
