skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -833,3 +833,5 @@ commit_hash:
     hash: "74f81db6eea66a70d8d73062149c2b50d8f3875d"
   "0.94.8":
     hash: "8507d6624cb1d208220640eb635096462bb2273a"
+  "0.94.9":
+    hash: "4e154fc9bb9ee98b3ef2384bff851a5d451c690a"
