skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -843,3 +843,5 @@ commit_hash:
     hash: "24d5d56c0ebba269c10c9b11531cdfc652653281"
   "0.94.13":
     hash: "1a7655f84ceba313534b7a6b1d82f3b2fe49ea0c"
+  "0.94.14":
+    hash: "89e5a068f9ba04044c49bdc0b8b21c0f6a0580a1"
