skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -849,3 +849,5 @@ commit_hash:
     hash: "c0686f04692a663374679bc09f7e352cc8c74d5f"
   "0.94.16":
     hash: "0d81dd2ad862944b463f41e110e9b90121eaa2aa"
+  "0.94.17":
+    hash: "29d6419675c00fb9dbe1e3b0c68657268886a4cf"
