skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -861,3 +861,5 @@ commit_hash:
     hash: "c8355e03a404227d27988e776b9be49c10dc1f7d"
   "0.94.22":
     hash: "9ab8104c596ff0047a30aa8b59d13f43c289efb1"
+  "0.94.23":
+    hash: "a6ef357e91abe6c84c19199ea0090089c0ab77ff"
