skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -869,3 +869,5 @@ commit_hash:
     hash: "864ca6aa171094eaefde9878dcb9a9e75f9d2a9d"
   "0.94.26":
     hash: "6afef99484297a5f2a63fc95252a95df72225c1f"
+  "0.94.27":
+    hash: "e49328b13fcaec0fc043d88a80024fc84cfc9582"
