skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -891,3 +891,5 @@ commit_hash:
     hash: "a2d6b4470157d49bebc3fa4ea1786b859f82228f"
   "0.94.37":
     hash: "87e868245c0b5d2a0a1efb633ab436b2d7123aa8"
+  "0.94.38":
+    hash: "d9709b681622481f2ff00e524cc18231d4e2c7a1"
