skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -899,3 +899,5 @@ commit_hash:
     hash: "702daab8c48834494a7e22d02e471f65064af5f1"
   "0.95.2":
     hash: "18ce27d70e79b59eafb9a79903670c28c86a8c5a"
+  "0.95.3":
+    hash: "cb9a6c648b5ebdf65f869bcda770e87d76c68a1c"
