skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -907,3 +907,5 @@ commit_hash:
     hash: "c30715f1037728abc7c94ab556bca0575e208990"
   "0.95.6":
     hash: "055b09b3ed4c14c2a504cebdba67e59e353a3014"
+  "0.95.7":
+    hash: "ed4ef8fc60a8ef65bd558245307f432aff3cd552"
