Pull request 435: Use new Docker/Packer images
Squashed commit of the following:

commit 064f5261b06359b04b66c7892ccba21b54f469c3
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed May 14 22:25:44 2025 +0300

    Oops

commit 563b8882cc13c47f80315311752d7a73948b4f0e
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed May 14 22:22:55 2025 +0300

    Fix macOS vs iOS detection in CMake 4.0

commit 2b4042c2b1ce913a244d0c0c4fbaec16993dd408
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed May 14 22:15:34 2025 +0300

    skipci: Test

commit b45cd5d3111bd16df1d256f4b9ff5fad83faab32
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Wed May 14 21:22:18 2025 +0300

    Use new Docker/Packer images

--- a/net/CMakeLists.txt
+++ b/net/CMakeLists.txt
@@ -33,8 +33,7 @@ set(SOURCE_FILES
         ${NET_SOURCE_DIR}/quic_connector.cpp
     )
 
-string(TOLOWER "${CMAKE_OSX_SYSROOT}" OSX_SYSROOT_LC)
-if(APPLE AND OSX_SYSROOT_LC MATCHES "/macosx([0-9]+\.)+sdk$")
+if(APPLE AND NOT CMAKE_SYSTEM_NAME STREQUAL iOS)
     list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/os_tunnel_mac.cpp)
     list(APPEND SOURCE_FILES ${NET_SOURCE_DIR}/mac_dns_settings_manager.mm)
 elseif(WIN32)
@@ -47,7 +46,7 @@ endif()
 add_library(vpnlibs_net STATIC EXCLUDE_FROM_ALL ${SOURCE_FILES})
 set_target_properties(vpnlibs_net PROPERTIES POSITION_INDEPENDENT_CODE ON)
 if (NOT MSVC)
-    if(APPLE AND OSX_SYSROOT_LC MATCHES "/macosx([0-9]+\.)+sdk$")
+    if(APPLE AND NOT CMAKE_SYSTEM_NAME STREQUAL iOS)
         target_compile_options(vpnlibs_net PRIVATE -fobjc-arc)
         target_link_libraries(vpnlibs_net "-framework Foundation" "-framework SystemConfiguration")
     endif()
