skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -955,3 +955,5 @@ commit_hash:
     hash: "b8978a4dd454fa685c90bdcb9b0582433e86cb5e"
   "0.95.30":
     hash: "09224cc530cb922e5a7a0b40a5ff5cd2c9a51d7f"
+  "0.95.31":
+    hash: "72db8aa38f3f65356b83d5c6ad1371abf1c3d417"
