skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -957,3 +957,5 @@ commit_hash:
     hash: "09224cc530cb922e5a7a0b40a5ff5cd2c9a51d7f"
   "0.95.31":
     hash: "72db8aa38f3f65356b83d5c6ad1371abf1c3d417"
+  "0.95.32":
+    hash: "2765c61937f0cf85b40437930c8315e083a59ed0"
