skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -969,3 +969,5 @@ commit_hash:
     hash: "8c4f84c6caa890d169065cc8eaa57dc5263a0965"
   "0.95.37":
     hash: "c297cae65da5a456f9bd652d59341e73e05dfe96"
+  "0.95.38":
+    hash: "3358c4eaf454b93686a2692e7e3c064e38a43a6a"
