Pull request 467: Add new integration tests scheme
Squashed commit of the following:

commit a9c8a59b37149e32a12890c0eabdf1dec8d7db03
Merge: 9041b7ad 0c023936
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 21:26:10 2025 +0300

    Merge branch 'fix/AG-42594' of ssh://bit.int.agrd.dev:7999/adguard-core-libs/vpn-libs into fix/AG-42594

commit 9041b7ad6d11068f99af979083bdaedc12fb54f2
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 21:25:52 2025 +0300

    Remove unrelated code

commit 0c0239365bafb59767e85c3727b6dbcd813a8228
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 19:39:19 2025 +0300

    skipci: Applied suggestion

commit 9403e3d7dd073e1f82b0ba69b799c060e7f0bf9a
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 18:43:02 2025 +0300

    Try to fix Windows test

commit 8211a0f07b3ad5e25c58aa1d30a2a1f0a8a51ba5
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 18:29:09 2025 +0300

    Add autoclean for VLRT spec

commit 76fec94eac2deac9ff55bf079eb4c36db16281e3
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 18:19:01 2025 +0300

    integrated-tests -> integration-tests

commit 4729496fd1f588be91c8ab07693cf6d5e8a7f924
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 18:14:19 2025 +0300

    skipci: Up time limits

commit b42a932081adac24006472e192ca67e4c8d8bfe1
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 18:03:03 2025 +0300

    skipci: Browser test fixes

commit 92e8b93648a687a60ada7556abb006920394f1fe
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 17:07:41 2025 +0300

    skipci: Fix browser test output

commit eaa88cac16210324deedbb348d574d0c6cc3ff0d
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 17:04:08 2025 +0300

    Improvements

commit 0c4fa9d78f4266a0d32d9f64b36f66e9a76efa43
Author: Sergey Fionov <sfionov@adguard.com>
Date:   Mon Aug 4 16:57:18 2025 +0300

    skipci: Oops

commit 80b23b10c809e73182f74556a74e15678f3

--- a/bamboo-specs/run-instrumented-test.yaml
+++ b/bamboo-specs/run-instrumented-test.yaml
@@ -3,40 +3,33 @@ version: 2
 plan:
   project-key: CL
   key: VLRIT
-  name: VpnLibs - Run Instrumented Test
+  name: VpnLibs - Run Browser Integrated Test
 stages:
-  - Default Stage:
+  - Build stage:
       manual: false
       final: false
       jobs:
-        - Run Instrumented test
-Run Instrumented test:
-  key: JOB1
-  description: Runs Instrumented tests
+        - Build binaries
+  - Tests stage:
+      manual: false
+      final: false
+      jobs:
+        - Run integration test
+Build binaries:
+  key: BB
+  description: Build client and endpoint binaries
+  docker:
+    image: adguard/core-libs:2.6
   tasks:
-    - script:
-        interpreter: SHELL
-        scripts:
-          - |-
-            #!/bin/bash
-
-            set -x -e
-
-            exec docker run --rm --volume ${bamboo.working.directory}:${bamboo.working.directory} adguard/core-libs:1.16 /bin/sh -c 'rm -rf ${bamboo.working.directory}/*'
-        description: Clean working directory with root privileges
+    - !include docker-clean.yaml
     - checkout:
         repository: core-libs/vpn-libs
-        path: test/client/vpn-libs
+        path: vpn-libs
         force-clean-build: 'true'
         description: Checkout client
     - checkout:
-        repository: core-libs/vpn-libs
-        path: test/network-load-simulator/vpn-libs
-        force-clean-build: 'true'
-        description: Checkout client into "network-load-simulator"
-    - checkout:
         repository: core-libs/vpn-libs-endpoint
-        path: test/endpoint/vpn-libs-endpoint
+        path: vpn-libs-endpoint
         force-clean-build: 'true'
         description: Checkout endpoint
     - script:
@@ -47,17 +40,65 @@ Run Instrumented test:
 
             set -x -e
 
-            cp -RT client/vpn-libs/integration-tests/ ./
+            pwd
+            ls -l
+            mkdir -p output
+            export OUTPUT_DIR=${PWD}/output
+            export SOURCE_DIR=${PWD}
+
+            export CONAN_REPO_URL=${bamboo.conanRepoUrl}
+            vpn-libs/integration-tests/build_client.sh
+            vpn-libs/integration-tests/build_endpoint.sh
+  requirements:
+    - adg-privileged-docker
+  artifacts:
+    - name: standalone_client
+      location: output
+      pattern: standalone_client
+      shared: true
+    - name: vpn_endpoint
+      location: output
+      pattern: vpn_endpoint
+      shared: true
+  artifact-subscriptions: [ ]
+Run integration test:
+  key: JOB1
+  description: Runs integration test
+  docker:
+    image: adguard/core-libs-testing:2.6.0
+    docker-run-arguments: [ --privileged, --device=/dev/net/tun ]
+  artifact-subscriptions:
+    - artifact: standalone_client
+      destination: output
+    - artifact: vpn_endpoint
+      destination: output
+  tasks:
+    - !include docker-clean.yaml
+    - checkout:
+        repository: core-libs/vpn-libs
+        path: vpn-libs
+        force-clean-build: 'true'
+        description: Checkout client
+    - script:
+        interpreter: SHELL
+        scripts:
+          - |-
+            #!/bin/bash
+
+            set -x -e
+
+            export OUTPUT_DIR=${PWD}/output
+            export TEST_DIR=${PWD}/vpn-libs/integration-tests/tests
+
+            # Nameserver with global routable IP is required here.
+            # 94.140.14.140 is AdGuard Unfiltered DNS
+            echo nameserver 94.140.14.140 > /etc/resolv.conf
 
             # Download agvpn_helper from artifactory
             curl -O https://art.int.agrd.dev/artifactory/adguard-pods/binaries/agvpn_helper/agvpn_helper-linux.tar.gz
-            tar -xvf agvpn_helper-linux.tar.gz            
+            tar -C ${OUTPUT_DIR} -xvf agvpn_helper-linux.tar.gz
 
-            ./integration_test.sh clean
-            ./integration_test.sh run browser ${bamboo.conanRepoUrl} ${bamboo.vpnLibsAppId} \
-            ${bamboo.vpnLibsTokenSecret}; exit $?
-        description: Run browser tests
-        working-dir: test
+            ${TEST_DIR}/browser/run.sh ${bamboo.vpnLibsAppId} ${bamboo.vpnLibsTokenSecret}
   final-tasks:
     - script:
         interpreter: SHELL
@@ -67,51 +108,43 @@ Run Instrumented test:
 
             set -x
 
-            pushd logs
+            pushd output
+
             # Check that file exists and is not empty
             if [ ! -f vpn_tun_http2.log ]; then
               echo "vpn_tun_http2.log does not exist"
               exit 1
             fi
-            
+
             timeout 10s gzip -f vpn_tun_http2.log
             if [ $? -eq 124 ]; then
               truncate -s 300M vpn_tun_http2.log
               timeout 10s gzip -f vpn_tun_http2.log || true
             fi
-            popd
 
-            ./integration_test.sh clean
-            ./integration_test.sh clean-browser
+            popd
         description: Gzip logs
-        working-dir: test
     - script:
         interpreter: SHELL
         scripts:
           - |-
             #!/bin/bash
 
-            set -x -e
-
-            pushd logs
+            pushd output
             rm -f vpn_tun_http2.log
             popd
         description: Cleanup
-        working-dir: test
   requirements:
     - adg-privileged-docker
   artifacts:
-    -
-      name: Vpn-Libs Log
-      location: test/logs
+    - name: Vpn-Libs Log
+      location: output
       pattern: '*.gz'
       shared: false
-    -
-      name: Test result
-      location: test/
+    - name: Test result
+      location: output
       pattern: 'output*.json'
       shared: true
-  artifact-subscriptions: [ ]
 repositories:
   - core-libs/vpn-libs:
       scope: global
