--- a/conandata.yml
+++ b/conandata.yml
@@ -1007,3 +1007,5 @@ commit_hash:
     hash: "6a8a62438ea5511dcb8601744c8788e2d14e5fec"
   "0.98.6":
     hash: "c78da40683b5192f6dd9d7fa43ccc9bdf592969c"
+  "0.98.7":
+    hash: "f2c8a96de4836adaad4d9456ac1b6a5642efc8df"
