skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1023,3 +1023,5 @@ commit_hash:
     hash: "9d6697ce600344d1059b09e476f6e32aba04a0be"
   "0.99.0":
     hash: "27e573f318f846a407ff14833f4bf83dd706a3fa"
+  "0.99.1":
+    hash: "7310691d484876002fa06b0fb3d2b9715e7a3f58"
